vcgen/app/Tiny/ParTiny.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 2.1.7 from app/Tiny/ParTiny.y
-----------------------------------------------------------------------------

state 43 contains 1 shift/reduce conflicts.
state 44 contains 2 shift/reduce conflicts.
state 48 contains 2 shift/reduce conflicts.
state 66 contains 1 shift/reduce conflicts.
state 97 contains 3 shift/reduce conflicts.
state 130 contains 3 shift/reduce conflicts.
state 136 contains 1 shift/reduce conflicts.
state 137 contains 1 shift/reduce conflicts.
state 138 contains 1 shift/reduce conflicts.
state 159 contains 1 shift/reduce conflicts.
state 160 contains 1 shift/reduce conflicts.

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pStmt -> Stmt                               (0)
	%start_pStmt1 -> Stmt1                             (1)
	%start_pStmt2 -> Stmt2                             (2)
	%start_pListInvariant -> ListInvariant             (3)
	%start_pInvariant -> Invariant                     (4)
	%start_pDecl1 -> Decl1                             (5)
	%start_pDecl -> Decl                               (6)
	%start_pListSpecEl -> ListSpecEl                   (7)
	%start_pSpecEl -> SpecEl                           (8)
	%start_pFormula1 -> Formula1                       (9)
	%start_pFormulaD -> FormulaD                       (10)
	%start_pFormula -> Formula                         (11)
	%start_pListBinder -> ListBinder                   (12)
	%start_pBinder -> Binder                           (13)
	%start_pBExpr -> BExpr                             (14)
	%start_pBExpr1 -> BExpr1                           (15)
	%start_pExpr -> Expr                               (16)
	%start_pExpr1 -> Expr1                             (17)
	%start_pExpr2 -> Expr2                             (18)
	Ident -> L_Ident                                   (19)
	Integer -> L_integ                                 (20)
	Stmt -> Stmt1 ';' Stmt                             (21)
	Stmt -> Stmt1                                      (22)
	Stmt1 -> Ident ':=' Expr                           (23)
	Stmt1 -> 'skip'                                    (24)
	Stmt1 -> Stmt2                                     (25)
	Stmt2 -> 'if' BExpr 'then' Stmt 'else' Stmt1       (26)
	Stmt2 -> 'if' BExpr 'then' Stmt 'fi'               (27)
	Stmt2 -> 'while' BExpr 'do' Stmt1                  (28)
	Stmt2 -> 'while' BExpr 'do' ListInvariant ';' Stmt1   (29)
	Stmt2 -> 'call' Ident '(' Expr ')'                 (30)
	Stmt2 -> 'begin' Decl ';' Stmt 'end'               (31)
	Stmt2 -> 'begin' Stmt 'end'                        (32)
	ListInvariant ->                                   (33)
	ListInvariant -> Invariant                         (34)
	ListInvariant -> Invariant ';' ListInvariant       (35)
	Invariant -> 'invariant' Formula                   (36)
	Decl1 -> 'var' Ident '=' Expr                      (37)
	Decl1 -> 'proc' Ident '(' Ident ')' '{' Stmt '}'   (38)
	Decl1 -> 'proc' Ident '(' Ident ')' ListSpecEl '{' Stmt '}'   (39)
	Decl -> Decl ';' Decl1                             (40)
	Decl -> Decl1                                      (41)
	ListSpecEl ->                                      (42)
	ListSpecEl -> SpecEl                               (43)
	ListSpecEl -> SpecEl ';' ListSpecEl                (44)
	SpecEl -> 'precondition' Formula                   (45)
	SpecEl -> 'postcondition' Formula                  (46)
	Formula1 -> FormulaD                               (47)
	Formula1 -> Formula '==>' Formula                  (48)
	Formula1 -> ListBinder '.' BExpr '==>' Formula     (49)
	Formula1 -> ListBinder '.' BExpr                   (50)
	Formula1 -> Formula1 '/\\' Formula                 (51)
	Formula1 -> Formula1 '∧' Formula                   (52)
	Formula1 -> '(' Formula ')'                        (53)
	FormulaD -> BExpr '\\/' FormulaD                   (54)
	FormulaD -> BExpr '∨' FormulaD                     (55)
	FormulaD -> BExpr                                  (56)
	Formula -> Formula1                                (57)
	ListBinder ->                                      (58)
	ListBinder -> Binder                               (59)
	ListBinder -> Binder '.' ListBinder                (60)
	Binder -> 'forall' Ident                           (61)
	Binder -> 'exists' Ident                           (62)
	BExpr -> BExpr '∧' BExpr1                          (63)
	BExpr -> BExpr '/\\' BExpr1                        (64)
	BExpr -> BExpr1                                    (65)
	BExpr1 -> Expr '=' Expr                            (66)
	BExpr1 -> Expr '<=' Expr                           (67)
	BExpr1 -> Expr '≤' Expr                            (68)
	BExpr1 -> Expr '>' Expr                            (69)
	BExpr1 -> '~' BExpr1                               (70)
	BExpr1 -> '¬' BExpr1                               (71)
	BExpr1 -> 'true'                                   (72)
	BExpr1 -> 'false'                                  (73)
	BExpr1 -> '(' BExpr ')'                            (74)
	Expr -> Expr '+' Expr1                             (75)
	Expr -> Expr '-' Expr1                             (76)
	Expr -> Expr1                                      (77)
	Expr1 -> Expr1 '*' Expr2                           (78)
	Expr1 -> Expr1 '/' Expr2                           (79)
	Expr1 -> Expr2                                     (80)
	Expr2 -> Integer                                   (81)
	Expr2 -> Ident                                     (82)
	Expr2 -> '(' Expr ')'                              (83)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'('            { PT _ (TS _ 1) }
	')'            { PT _ (TS _ 2) }
	'*'            { PT _ (TS _ 3) }
	'+'            { PT _ (TS _ 4) }
	'-'            { PT _ (TS _ 5) }
	'.'            { PT _ (TS _ 6) }
	'/'            { PT _ (TS _ 7) }
	'/\\'          { PT _ (TS _ 8) }
	':='           { PT _ (TS _ 9) }
	';'            { PT _ (TS _ 10) }
	'<='           { PT _ (TS _ 11) }
	'='            { PT _ (TS _ 12) }
	'==>'          { PT _ (TS _ 13) }
	'>'            { PT _ (TS _ 14) }
	'\\/'          { PT _ (TS _ 15) }
	'begin'        { PT _ (TS _ 16) }
	'call'         { PT _ (TS _ 17) }
	'do'           { PT _ (TS _ 18) }
	'else'         { PT _ (TS _ 19) }
	'end'          { PT _ (TS _ 20) }
	'exists'       { PT _ (TS _ 21) }
	'false'        { PT _ (TS _ 22) }
	'fi'           { PT _ (TS _ 23) }
	'forall'       { PT _ (TS _ 24) }
	'if'           { PT _ (TS _ 25) }
	'invariant'    { PT _ (TS _ 26) }
	'postcondition'{ PT _ (TS _ 27) }
	'precondition' { PT _ (TS _ 28) }
	'proc'         { PT _ (TS _ 29) }
	'skip'         { PT _ (TS _ 30) }
	'then'         { PT _ (TS _ 31) }
	'true'         { PT _ (TS _ 32) }
	'var'          { PT _ (TS _ 33) }
	'while'        { PT _ (TS _ 34) }
	'{'            { PT _ (TS _ 35) }
	'}'            { PT _ (TS _ 36) }
	'~'            { PT _ (TS _ 37) }
	'¬'            { PT _ (TS _ 38) }
	'∧'            { PT _ (TS _ 39) }
	'∨'            { PT _ (TS _ 40) }
	'≤'            { PT _ (TS _ 41) }
	L_Ident        { PT _ (TV $$) }
	L_integ        { PT _ (TI $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pStmt    rule  0
	%start_pStmt1   rule  1
	%start_pStmt2   rule  2
	%start_pListInvariant rule  3
	%start_pInvariant rule  4
	%start_pDecl1   rule  5
	%start_pDecl    rule  6
	%start_pListSpecEl rule  7
	%start_pSpecEl  rule  8
	%start_pFormula1 rule  9
	%start_pFormulaD rule  10
	%start_pFormula rule  11
	%start_pListBinder rule  12
	%start_pBinder  rule  13
	%start_pBExpr   rule  14
	%start_pBExpr1  rule  15
	%start_pExpr    rule  16
	%start_pExpr1   rule  17
	%start_pExpr2   rule  18
	Ident           rule  19
	Integer         rule  20
	Stmt            rules 21, 22
	Stmt1           rules 23, 24, 25
	Stmt2           rules 26, 27, 28, 29, 30, 31, 32
	ListInvariant   rules 33, 34, 35
	Invariant       rule  36
	Decl1           rules 37, 38, 39
	Decl            rules 40, 41
	ListSpecEl      rules 42, 43, 44
	SpecEl          rules 45, 46
	Formula1        rules 47, 48, 49, 50, 51, 52, 53
	FormulaD        rules 54, 55, 56
	Formula         rule  57
	ListBinder      rules 58, 59, 60
	Binder          rules 61, 62
	BExpr           rules 63, 64, 65
	BExpr1          rules 66, 67, 68, 69, 70, 71, 72, 73, 74
	Expr            rules 75, 76, 77
	Expr1           rules 78, 79, 80
	Expr2           rules 81, 82, 83

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_pStmt -> . Stmt                              (rule 0)

	'begin'        shift, and enter state 68
	'call'         shift, and enter state 69
	'if'           shift, and enter state 70
	'skip'         shift, and enter state 75
	'while'        shift, and enter state 71
	L_Ident        shift, and enter state 20

	Ident          goto state 72
	Stmt           goto state 76
	Stmt1          goto state 77
	Stmt2          goto state 74

State 1

	%start_pStmt1 -> . Stmt1                            (rule 1)

	'begin'        shift, and enter state 68
	'call'         shift, and enter state 69
	'if'           shift, and enter state 70
	'skip'         shift, and enter state 75
	'while'        shift, and enter state 71
	L_Ident        shift, and enter state 20

	Ident          goto state 72
	Stmt1          goto state 73
	Stmt2          goto state 74

State 2

	%start_pStmt2 -> . Stmt2                            (rule 2)

	'begin'        shift, and enter state 68
	'call'         shift, and enter state 69
	'if'           shift, and enter state 70
	'while'        shift, and enter state 71

	Stmt2          goto state 67

State 3

	%start_pListInvariant -> . ListInvariant            (rule 3)

	'invariant'    shift, and enter state 64
	%eof           reduce using rule 33

	ListInvariant  goto state 65
	Invariant      goto state 66

State 4

	%start_pInvariant -> . Invariant                    (rule 4)

	'invariant'    shift, and enter state 64

	Invariant      goto state 63

State 5

	%start_pDecl1 -> . Decl1                            (rule 5)

	'proc'         shift, and enter state 60
	'var'          shift, and enter state 61

	Decl1          goto state 62

State 6

	%start_pDecl -> . Decl                              (rule 6)

	'proc'         shift, and enter state 60
	'var'          shift, and enter state 61

	Decl1          goto state 58
	Decl           goto state 59

State 7

	%start_pListSpecEl -> . ListSpecEl                  (rule 7)

	'postcondition'shift, and enter state 54
	'precondition' shift, and enter state 55
	%eof           reduce using rule 42

	ListSpecEl     goto state 56
	SpecEl         goto state 57

State 8

	%start_pSpecEl -> . SpecEl                          (rule 8)

	'postcondition'shift, and enter state 54
	'precondition' shift, and enter state 55

	SpecEl         goto state 53

State 9

	%start_pFormula1 -> . Formula1                      (rule 9)

	'('            shift, and enter state 49
	'.'            reduce using rule 58
	'exists'       shift, and enter state 40
	'false'        shift, and enter state 33
	'forall'       shift, and enter state 41
	'true'         shift, and enter state 34
	'~'            shift, and enter state 35
	'¬'            shift, and enter state 36
	L_Ident        shift, and enter state 20
	L_integ        shift, and enter state 25

	Ident          goto state 21
	Integer        goto state 22
	Formula1       goto state 51
	FormulaD       goto state 45
	Formula        goto state 52
	ListBinder     goto state 47
	Binder         goto state 43
	BExpr          goto state 48
	BExpr1         goto state 38
	Expr           goto state 31
	Expr1          goto state 29
	Expr2          goto state 27

State 10

	%start_pFormulaD -> . FormulaD                      (rule 10)

	'('            shift, and enter state 32
	'false'        shift, and enter state 33
	'true'         shift, and enter state 34
	'~'            shift, and enter state 35
	'¬'            shift, and enter state 36
	L_Ident        shift, and enter state 20
	L_integ        shift, and enter state 25

	Ident          goto state 21
	Integer        goto state 22
	FormulaD       goto state 50
	BExpr          goto state 48
	BExpr1         goto state 38
	Expr           goto state 31
	Expr1          goto state 29
	Expr2          goto state 27

State 11

	%start_pFormula -> . Formula                        (rule 11)

	'('            shift, and enter state 49
	'.'            reduce using rule 58
	'exists'       shift, and enter state 40
	'false'        shift, and enter state 33
	'forall'       shift, and enter state 41
	'true'         shift, and enter state 34
	'~'            shift, and enter state 35
	'¬'            shift, and enter state 36
	L_Ident        shift, and enter state 20
	L_integ        shift, and enter state 25

	Ident          goto state 21
	Integer        goto state 22
	Formula1       goto state 44
	FormulaD       goto state 45
	Formula        goto state 46
	ListBinder     goto state 47
	Binder         goto state 43
	BExpr          goto state 48
	BExpr1         goto state 38
	Expr           goto state 31
	Expr1          goto state 29
	Expr2          goto state 27

State 12

	%start_pListBinder -> . ListBinder                  (rule 12)

	'exists'       shift, and enter state 40
	'forall'       shift, and enter state 41
	%eof           reduce using rule 58

	ListBinder     goto state 42
	Binder         goto state 43

State 13

	%start_pBinder -> . Binder                          (rule 13)

	'exists'       shift, and enter state 40
	'forall'       shift, and enter state 41

	Binder         goto state 39

State 14

	%start_pBExpr -> . BExpr                            (rule 14)

	'('            shift, and enter state 32
	'false'        shift, and enter state 33
	'true'         shift, and enter state 34
	'~'            shift, and enter state 35
	'¬'            shift, and enter state 36
	L_Ident        shift, and enter state 20
	L_integ        shift, and enter state 25

	Ident          goto state 21
	Integer        goto state 22
	BExpr          goto state 37
	BExpr1         goto state 38
	Expr           goto state 31
	Expr1          goto state 29
	Expr2          goto state 27

State 15

	%start_pBExpr1 -> . BExpr1                          (rule 15)

	'('            shift, and enter state 32
	'false'        shift, and enter state 33
	'true'         shift, and enter state 34
	'~'            shift, and enter state 35
	'¬'            shift, and enter state 36
	L_Ident        shift, and enter state 20
	L_integ        shift, and enter state 25

	Ident          goto state 21
	Integer        goto state 22
	BExpr1         goto state 30
	Expr           goto state 31
	Expr1          goto state 29
	Expr2          goto state 27

State 16

	%start_pExpr -> . Expr                              (rule 16)

	'('            shift, and enter state 24
	L_Ident        shift, and enter state 20
	L_integ        shift, and enter state 25

	Ident          goto state 21
	Integer        goto state 22
	Expr           goto state 28
	Expr1          goto state 29
	Expr2          goto state 27

State 17

	%start_pExpr1 -> . Expr1                            (rule 17)

	'('            shift, and enter state 24
	L_Ident        shift, and enter state 20
	L_integ        shift, and enter state 25

	Ident          goto state 21
	Integer        goto state 22
	Expr1          goto state 26
	Expr2          goto state 27

State 18

	%start_pExpr2 -> . Expr2                            (rule 18)

	'('            shift, and enter state 24
	L_Ident        shift, and enter state 20
	L_integ        shift, and enter state 25

	Ident          goto state 21
	Integer        goto state 22
	Expr2          goto state 23

State 19

	Ident -> . L_Ident                                  (rule 19)

	L_Ident        shift, and enter state 20


State 20

	Ident -> L_Ident .                                  (rule 19)

	'('            reduce using rule 19
	')'            reduce using rule 19
	'*'            reduce using rule 19
	'+'            reduce using rule 19
	'-'            reduce using rule 19
	'.'            reduce using rule 19
	'/'            reduce using rule 19
	'/\\'          reduce using rule 19
	':='           reduce using rule 19
	';'            reduce using rule 19
	'<='           reduce using rule 19
	'='            reduce using rule 19
	'==>'          reduce using rule 19
	'>'            reduce using rule 19
	'\\/'          reduce using rule 19
	'do'           reduce using rule 19
	'else'         reduce using rule 19
	'end'          reduce using rule 19
	'fi'           reduce using rule 19
	'then'         reduce using rule 19
	'{'            reduce using rule 19
	'}'            reduce using rule 19
	'∧'            reduce using rule 19
	'∨'            reduce using rule 19
	'≤'            reduce using rule 19
	%eof           reduce using rule 19


State 21

	Expr2 -> Ident .                                    (rule 82)

	')'            reduce using rule 82
	'*'            reduce using rule 82
	'+'            reduce using rule 82
	'-'            reduce using rule 82
	'/'            reduce using rule 82
	'/\\'          reduce using rule 82
	';'            reduce using rule 82
	'<='           reduce using rule 82
	'='            reduce using rule 82
	'==>'          reduce using rule 82
	'>'            reduce using rule 82
	'\\/'          reduce using rule 82
	'do'           reduce using rule 82
	'else'         reduce using rule 82
	'end'          reduce using rule 82
	'fi'           reduce using rule 82
	'then'         reduce using rule 82
	'{'            reduce using rule 82
	'}'            reduce using rule 82
	'∧'            reduce using rule 82
	'∨'            reduce using rule 82
	'≤'            reduce using rule 82
	%eof           reduce using rule 82


State 22

	Expr2 -> Integer .                                  (rule 81)

	')'            reduce using rule 81
	'*'            reduce using rule 81
	'+'            reduce using rule 81
	'-'            reduce using rule 81
	'/'            reduce using rule 81
	'/\\'          reduce using rule 81
	';'            reduce using rule 81
	'<='           reduce using rule 81
	'='            reduce using rule 81
	'==>'          reduce using rule 81
	'>'            reduce using rule 81
	'\\/'          reduce using rule 81
	'do'           reduce using rule 81
	'else'         reduce using rule 81
	'end'          reduce using rule 81
	'fi'           reduce using rule 81
	'then'         reduce using rule 81
	'{'            reduce using rule 81
	'}'            reduce using rule 81
	'∧'            reduce using rule 81
	'∨'            reduce using rule 81
	'≤'            reduce using rule 81
	%eof           reduce using rule 81


State 23

	%start_pExpr2 -> Expr2 .                            (rule 18)

	%eof           accept


State 24

	Expr2 -> '(' . Expr ')'                             (rule 83)

	'('            shift, and enter state 24
	L_Ident        shift, and enter state 20
	L_integ        shift, and enter state 25

	Ident          goto state 21
	Integer        goto state 22
	Expr           goto state 118
	Expr1          goto state 29
	Expr2          goto state 27

State 25

	Integer -> L_integ .                                (rule 20)

	')'            reduce using rule 20
	'*'            reduce using rule 20
	'+'            reduce using rule 20
	'-'            reduce using rule 20
	'/'            reduce using rule 20
	'/\\'          reduce using rule 20
	';'            reduce using rule 20
	'<='           reduce using rule 20
	'='            reduce using rule 20
	'==>'          reduce using rule 20
	'>'            reduce using rule 20
	'\\/'          reduce using rule 20
	'do'           reduce using rule 20
	'else'         reduce using rule 20
	'end'          reduce using rule 20
	'fi'           reduce using rule 20
	'then'         reduce using rule 20
	'{'            reduce using rule 20
	'}'            reduce using rule 20
	'∧'            reduce using rule 20
	'∨'            reduce using rule 20
	'≤'            reduce using rule 20
	%eof           reduce using rule 20


State 26

	%start_pExpr1 -> Expr1 .                            (rule 17)
	Expr1 -> Expr1 . '*' Expr2                          (rule 78)
	Expr1 -> Expr1 . '/' Expr2                          (rule 79)

	'*'            shift, and enter state 116
	'/'            shift, and enter state 117
	%eof           accept


State 27

	Expr1 -> Expr2 .                                    (rule 80)

	')'            reduce using rule 80
	'*'            reduce using rule 80
	'+'            reduce using rule 80
	'-'            reduce using rule 80
	'/'            reduce using rule 80
	'/\\'          reduce using rule 80
	';'            reduce using rule 80
	'<='           reduce using rule 80
	'='            reduce using rule 80
	'==>'          reduce using rule 80
	'>'            reduce using rule 80
	'\\/'          reduce using rule 80
	'do'           reduce using rule 80
	'else'         reduce using rule 80
	'end'          reduce using rule 80
	'fi'           reduce using rule 80
	'then'         reduce using rule 80
	'{'            reduce using rule 80
	'}'            reduce using rule 80
	'∧'            reduce using rule 80
	'∨'            reduce using rule 80
	'≤'            reduce using rule 80
	%eof           reduce using rule 80


State 28

	%start_pExpr -> Expr .                              (rule 16)
	Expr -> Expr . '+' Expr1                            (rule 75)
	Expr -> Expr . '-' Expr1                            (rule 76)

	'+'            shift, and enter state 110
	'-'            shift, and enter state 111
	%eof           accept


State 29

	Expr -> Expr1 .                                     (rule 77)
	Expr1 -> Expr1 . '*' Expr2                          (rule 78)
	Expr1 -> Expr1 . '/' Expr2                          (rule 79)

	')'            reduce using rule 77
	'*'            shift, and enter state 116
	'+'            reduce using rule 77
	'-'            reduce using rule 77
	'/'            shift, and enter state 117
	'/\\'          reduce using rule 77
	';'            reduce using rule 77
	'<='           reduce using rule 77
	'='            reduce using rule 77
	'==>'          reduce using rule 77
	'>'            reduce using rule 77
	'\\/'          reduce using rule 77
	'do'           reduce using rule 77
	'else'         reduce using rule 77
	'end'          reduce using rule 77
	'fi'           reduce using rule 77
	'then'         reduce using rule 77
	'{'            reduce using rule 77
	'}'            reduce using rule 77
	'∧'            reduce using rule 77
	'∨'            reduce using rule 77
	'≤'            reduce using rule 77
	%eof           reduce using rule 77


State 30

	%start_pBExpr1 -> BExpr1 .                          (rule 15)

	%eof           accept


State 31

	BExpr1 -> Expr . '=' Expr                           (rule 66)
	BExpr1 -> Expr . '<=' Expr                          (rule 67)
	BExpr1 -> Expr . '≤' Expr                           (rule 68)
	BExpr1 -> Expr . '>' Expr                           (rule 69)
	Expr -> Expr . '+' Expr1                            (rule 75)
	Expr -> Expr . '-' Expr1                            (rule 76)

	'+'            shift, and enter state 110
	'-'            shift, and enter state 111
	'<='           shift, and enter state 112
	'='            shift, and enter state 113
	'>'            shift, and enter state 114
	'≤'            shift, and enter state 115


State 32

	BExpr1 -> '(' . BExpr ')'                           (rule 74)
	Expr2 -> '(' . Expr ')'                             (rule 83)

	'('            shift, and enter state 32
	'false'        shift, and enter state 33
	'true'         shift, and enter state 34
	'~'            shift, and enter state 35
	'¬'            shift, and enter state 36
	L_Ident        shift, and enter state 20
	L_integ        shift, and enter state 25

	Ident          goto state 21
	Integer        goto state 22
	BExpr          goto state 109
	BExpr1         goto state 38
	Expr           goto state 98
	Expr1          goto state 29
	Expr2          goto state 27

State 33

	BExpr1 -> 'false' .                                 (rule 73)

	')'            reduce using rule 73
	'/\\'          reduce using rule 73
	';'            reduce using rule 73
	'==>'          reduce using rule 73
	'\\/'          reduce using rule 73
	'do'           reduce using rule 73
	'then'         reduce using rule 73
	'{'            reduce using rule 73
	'∧'            reduce using rule 73
	'∨'            reduce using rule 73
	%eof           reduce using rule 73


State 34

	BExpr1 -> 'true' .                                  (rule 72)

	')'            reduce using rule 72
	'/\\'          reduce using rule 72
	';'            reduce using rule 72
	'==>'          reduce using rule 72
	'\\/'          reduce using rule 72
	'do'           reduce using rule 72
	'then'         reduce using rule 72
	'{'            reduce using rule 72
	'∧'            reduce using rule 72
	'∨'            reduce using rule 72
	%eof           reduce using rule 72


State 35

	BExpr1 -> '~' . BExpr1                              (rule 70)

	'('            shift, and enter state 32
	'false'        shift, and enter state 33
	'true'         shift, and enter state 34
	'~'            shift, and enter state 35
	'¬'            shift, and enter state 36
	L_Ident        shift, and enter state 20
	L_integ        shift, and enter state 25

	Ident          goto state 21
	Integer        goto state 22
	BExpr1         goto state 108
	Expr           goto state 31
	Expr1          goto state 29
	Expr2          goto state 27

State 36

	BExpr1 -> '¬' . BExpr1                              (rule 71)

	'('            shift, and enter state 32
	'false'        shift, and enter state 33
	'true'         shift, and enter state 34
	'~'            shift, and enter state 35
	'¬'            shift, and enter state 36
	L_Ident        shift, and enter state 20
	L_integ        shift, and enter state 25
